# WatchOut-Telegram

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py  accounts.py  auth.py  dashboard.py  deps.py  intelligence.py  messages.py  notifications.py  rules.py  runs.py  system.py  targets.py
backend/app/core/: config.py  database.py  security.py
backend/app/models/: __init__.py  domain.py
backend/app/notifications/: dispatcher.py  message_format.py  telegram_bot.py  webhook.py
backend/app/rules/: engine.py
backend/app/schemas/: __init__.py  domain.py
backend/app/scripts/: migrate_sqlite_to_postgres.py
backend/app/services/: bootstrap.py  collection_settings.py  enrichment.py  intelligence_settings.py  json_utils.py  messages.py
backend/app/storage/: sinks.py
backend/app/telegram/: backfill.py  login_flow.py  runtime.py  utils.py
backend/app/workers/: account_health_scheduler.py  backfill_scheduler.py  initial_collection.py
docs/: architecture.md  clickhouse_telegram_messages.sql  platform-plan.md
frontend/: Dockerfile  index.html  package-lock.json  package.json
frontend/src/: main.jsx  styles.css
frontend/src/lib/: api.js
