[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "watchout-telegram-backend"
version = "0.1.0"
description = "FastAPI backend for an independent Telegram monitoring platform."
requires-python = ">=3.11"
dependencies = [
  "APScheduler>=3.10.4",
  "SQLAlchemy>=2.0.30",
  "Telethon>=1.34.0",
  "python-socks>=2.4.4",
  "PySocks>=1.7.1",
  "fastapi>=0.111.0",
  "passlib>=1.7.4",
  "pydantic-settings>=2.2.1",
  "python-jose[cryptography]>=3.3.0",
  "python-multipart>=0.0.9",
  "uvicorn[standard]>=0.30.0"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
